syntax = "proto3";

package backend.v1;

import "backend/v1/resources.proto";

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message CreateUserResponse {
  User user = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
}

message LogoutRequest {}

message LogoutResponse {}

message PingRequest {
  string name = 1;
}

message PingResponse {
  string message = 1;
}

message CreateQuestionRequest {
  int32 user_id = 1; 
  string content = 2; 
  bool is_public = 3; 
}

message CreateQuestionResponse {
  Question question = 1;
}

message GetQuestionRequest {
  int32 question_id = 1;
}

message GetQuestionResponse {
  Question question = 1;
}

message GetQuestionListRequest {}

message GetQuestionListResponse {
  repeated Question question = 1;
}

message UpdateQuestionRequest{
  int32 question_id = 1;
  bool is_public = 3;
}

message UpdateQuestionResponse{
  Question question = 1;
}

message DeleteQuestionRequest{
  int32 question_id = 1;
}

message DeleteQuestionResponse{
  Question question = 1;
}

message CreateAnswerRequest{
  int32 question_id = 1;
  int32 user_id = 2;
  string content = 3;
}

message CreateAnswerResponse{
  Answer answer = 1;
}

message GetAnswerRequest{
  int32 answer_id = 1;
}

message GetAnswerResponse{
  Answer answer = 1;
}

message GetAnswerListRequest{}

message GetAnswerListResponse{
  repeated Answer answer = 1;
}

message GetAnswerListByQuestionIdRequest{
  int32 question_id = 1;
}

message GetAnswerListByQuestionIdResponse{
  repeated Answer answer = 1;
}

message UpdateAnswerRequest{
  int32 answer_id = 1;
  string content = 2;
}

message UpdateAnswerResponse{
  Answer answer = 1;
}

message DeleteAnswerRequest{
  int32 answer_id = 1;
}

message DeleteAnswerResponse{
  Answer answer = 1;
}
